--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ services:
   app:
     build:
       context: .
+      args:
+        API_TOKEN: ${API_TOKEN}
     container_name: fiquela-api
     expose:
       - "9000"
