--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "nette/di": "^3.2",
     "contributte/psr11-container-interface": "^0.6.0",
     "symfony/uid": "^7.2",
-    "guzzlehttp/guzzle": "^7.9"
+    "guzzlehttp/guzzle": "^7.9",
+    "vlucas/phpdotenv": "^5.6"
   },
   "minimum-stability": "stable",
   "autoload": {
