--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -5,6 +5,8 @@ server {
     root /app/public;
     index index.php;
 
+    client_max_body_size 20M;
+
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
     }
