Try to persist data for docker

--- a/docker-compose.clf.yaml
+++ b/docker-compose.clf.yaml
@@ -1,4 +1,7 @@
 services:
   app:
     volumes:
-      - ./workspace:/app/workspace
+      - fiquela-workspace:/app/workspace
+
+volumes:
+  fiquela-workspace:
