--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
     "contributte/psr11-container-interface": "^0.6.0",
     "symfony/uid": "^7.2",
     "guzzlehttp/guzzle": "^7.9",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "league/flysystem-aws-s3-v3": "^3.0",
+    "aws/aws-sdk-php": "^3.0"
   },
   "minimum-stability": "stable",
   "autoload": {
