--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -8,7 +8,7 @@ spec:
         deploy_on_push: true
       name: fiquela-api
       build_command: "mkdir ./temp ./logs ./workspace && chown -R 1000:1000 ./temp ./logs ./workspace && chmod -R 775 ./temp ./logs ./workspace"
-      run_command: "heroku-php-nginx -C ./config/do/nginx_app.conf public/"
+      run_command: "heroku-php-nginx public/"
       instance_count: 1
       instance_size_slug: basic-xxs
       envs:
