--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "ext-fileinfo": "*",
     "slim/slim": "4.*",
     "slim/psr7": "^1.7",
-    "1biot/fiquela": "^2.0",
+    "1biot/fiquela": "dev-main",
     "nette/utils": "^4.0",
     "tracy/tracy": "^2.10",
     "league/csv": "^9.23",
