Changed authenticating, from comparing token to obtaining token from username and password. Token is valid for 12 hours with revokable function

--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -12,7 +12,10 @@ spec:
       instance_count: 1
       instance_size_slug: basic-xxs
       envs:
-        - key: API_TOKEN
+        - key: API_USER
+          scope: RUN_TIME
+          type: SECRET
+        - key: API_PASSWORD_HASH
           scope: RUN_TIME
           type: SECRET
         - key: S3_ENABLED
