--- a/config/app/services.neon
+++ b/config/app/services.neon
@@ -1,17 +1,17 @@
 services:
     S3SyncFactory: \Api\Storage\S3SyncFactory(%workspaceS3%)
     workspace: \Api\Workspace(%workspacePath%, @S3SyncFactory::create())
-    tokenAuthenticator: \Api\Auth\TokenAuthenticator(%apiKey%, @workspace)
+    jwtAuthenticator: \Api\Auth\SingleUserJwtAuthenticator(%apiUsername%, %apiPasswordHash%, @workspace)
     authenticatorFactory:
         class: \Api\Auth\AuthenticatorFactory()
         setup:
-            - register(@tokenAuthenticator)
+            - register(@jwtAuthenticator, true)
 
     - \Api\Middlewares\AuthMiddleware(@authenticatorFactory)
 
+    - \Api\Endpoints\Auth(@authenticatorFactory)
     - \Api\Endpoints\Export
     - \Api\Endpoints\Files
     - \Api\Endpoints\History
     - \Api\Endpoints\Query
 
-    - \Api\Schemas\DownloadFile
