Removed dependency of tracy debugger, replaced by monolog and added refresh option to query and added option to run api server in readonly mode

--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -12,6 +12,9 @@ spec:
       instance_count: 1
       instance_size_slug: basic-xxs
       envs:
+        - key: API_ENV
+          scope: RUN_TIME
+          value: "prod"
         - key: API_USER
           scope: RUN_TIME
           type: SECRET
