--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,23 @@
   "require": {
     "ext-mbstring": "*",
     "ext-fileinfo": "*",
+    "1biot/fiquela": "^2.0",
+    "aws/aws-sdk-php": "^3.0",
+    "contributte/psr11-container-interface": "^0.6.0",
+    "firebase/php-jwt": "^6.11",
+    "guzzlehttp/guzzle": "^7.9",
+    "halaxa/json-machine": "^1.2",
+    "league/csv": "^9.23",
+    "league/flysystem-aws-s3-v3": "^3.0",
+    "monolog/monolog": "^3.9",
+    "nette/di": "^3.2",
+    "nette/neon": "^3.4",
+    "nette/utils": "^4.0",
     "slim/slim": "4.*",
     "slim/psr7": "^1.7",
-    "1biot/fiquela": "^2.0",
-    "nette/utils": "^4.0",
-    "tracy/tracy": "^2.10",
-    "league/csv": "^9.23",
-    "halaxa/json-machine": "^1.2",
-    "symfony/yaml": "^7.2",
-    "nette/neon": "^3.4",
-    "nette/di": "^3.2",
-    "contributte/psr11-container-interface": "^0.6.0",
     "symfony/uid": "^7.2",
-    "guzzlehttp/guzzle": "^7.9",
-    "vlucas/phpdotenv": "^5.6",
-    "league/flysystem-aws-s3-v3": "^3.0",
-    "aws/aws-sdk-php": "^3.0",
-    "firebase/php-jwt": "^6.11"
+    "symfony/yaml": "^7.2",
+    "vlucas/phpdotenv": "^5.6"
   },
   "minimum-stability": "stable",
   "autoload": {
