--- a/config/app/config.neon
+++ b/config/app/config.neon
@@ -1,10 +1,13 @@
 parameters:
     rootDir: ./..
+    logDir: %rootDir%/logs
     wwwDir: %rootDir%/public
     apiKey: ::getenv(API_TOKEN)
     apiUsername: ::getenv(API_USER)
     apiPasswordHash: ::getenv(API_PASSWORD_HASH)
-    workspacePath: %rootDir%/workspace
+    workspace:
+        rootPath: %rootDir%/workspace
+        readonly: false
 
 
 includes:
