--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "slim/psr7": "^1.7",
     "symfony/uid": "^7.2",
     "symfony/yaml": "^7.2",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "phpoffice/phpspreadsheet": "^5.4"
   },
   "minimum-stability": "stable",
   "autoload": {
