Fixed docker build and added GD extension

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "require": {
     "ext-mbstring": "*",
     "ext-fileinfo": "*",
+    "ext-gd": "*",
     "1biot/fiquela": "^2.0",
     "aws/aws-sdk-php": "^3.0",
     "contributte/psr11-container-interface": "^0.6.0",
