--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,14 @@
     "contributte/psr11-container-interface": "^0.6.0",
     "firebase/php-jwt": "^6.11",
     "guzzlehttp/guzzle": "^7.9",
-    "halaxa/json-machine": "^1.2",
-    "league/csv": "^9.23",
     "league/flysystem-aws-s3-v3": "^3.0",
     "monolog/monolog": "^3.9",
     "nette/di": "^3.2",
-    "nette/neon": "^3.4",
     "nette/utils": "^4.0",
     "slim/slim": "4.*",
     "slim/psr7": "^1.7",
     "symfony/uid": "^7.2",
-    "symfony/yaml": "^7.2",
-    "vlucas/phpdotenv": "^5.6",
-    "phpoffice/phpspreadsheet": "^5.4"
+    "vlucas/phpdotenv": "^5.6"
   },
   "minimum-stability": "stable",
   "autoload": {
